[metadata]
name = test_lib
description = Test framework
author = Ananthapadmanabhan M
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
package_dir =
    =test_scripts
    =test_runner
    =libs
zip_safe = no

[options.extras_require]
testing =
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 160